--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --customer-color: #8E8F99;
     --customer-hover-color: #404BBF;
     --footer-icon-hover: #31D0AA;
+    --transition-cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -112,6 +113,8 @@ header {
 
     font-weight: 500;
     color: var(--title-text-color);
+
+    transition: color 250ms var(--transition-cubic);
 }
 
 .site-nav .item +.item {
@@ -128,7 +131,23 @@ header {
 }
 
 .site-nav .link.current {
+    position: relative;
+
     color: var(--accent-color);
+}
+
+.site-nav .link.current::after {
+    content: '';
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
 }
 
 /* Contacts */
@@ -144,7 +163,9 @@ header {
     padding-bottom: 24px;
 
     font-style: normal;
-    color: var(--primary-text-color)
+    color: var(--primary-text-color);
+
+    transition: color 250ms var(--transition-cubic);
 }
 
 .contacts .link:hover,
@@ -203,6 +224,7 @@ header {
     line-height: 1.2;
     color: var(--light-color);
     background-color: var(--accent-color);
+    transition: box-shadow 250ms var(--transition-cubic);
 }
 
 .hero-btn:hover,
@@ -331,11 +353,18 @@ header {
     display: flex;
     width: 40px;
     height: 40px;
-    color: var(--light-color);
-    background-color: var(--accent-color);
     justify-content: center;
     align-items: center;
+
+    color: var(--light-color);
+    background-color: var(--accent-color);
     border-radius: 50%;
+
+    transition: background-color 250ms var(--transition-cubic);
+}
+
+.team-soc-link:hover {
+    background-color: var(--customer-hover-color);
 }
 
 .team-soc-icon {
@@ -361,9 +390,12 @@ header {
     height: 88px;
     justify-content: center;
     align-items: center;
+
     border: 1px solid var(--customer-color);
     border-radius: 4px;
     color: var(--customer-color);
+
+    transition: border-color 250ms var(--transition-cubic), color 250ms var(--transition-cubic);
 }
 
 .customer-link:hover,
@@ -376,6 +408,59 @@ header {
     width: 104px;
     height: 56px;
     fill: currentColor;
+}
+
+/* Backdrop */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    opacity: 1;
+    background-color: rgba(46, 47, 66, 0.4);
+
+    transition: opacity 250ms var(--transition-cubic), background-color 250ms var(--transition-cubic);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 408px;
+    height: 576px;
+    padding: 24px;
+
+    background-color: #fff;
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.cross-button {
+    margin-left: auto;
+    display: flex;
+    width: 24px;
+    height: 24px;
+    align-items: center;
+    justify-content: center;
+
+    cursor: pointer;
+    background-color: var(--footer-text-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+}
+
+.cross-icon {
+    width: 8px;
+    height: 8px;
 }
 
 /* Portfolio */
@@ -398,6 +483,8 @@ header {
     color: var(--accent-color);
     background-color: var(--footer-logo-color);
     border: 1px solid var(--footer-text-color);
+
+    transition: color 250ms var(--transition-cubic), background-color 250ms var(--transition-cubic), box-shadow 250ms var(--transition-cubic), border 250ms var(--transition-cubic);
 }
 
 .btn.filter:hover,
@@ -417,15 +504,54 @@ header {
 }
 
 .gallery-list .item {
+    position: relative;
+
     width: 360px;
     
     border-bottom: 0.5px solid var(--footer-logo-color);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+
+    transition: box-shadow 250ms var(--transition-cubic);
 }
 
 .gallery-list .item:hover,
 .gallery-list .item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.gallery-list .item-thumb {
+    position: relative;
+
+    overflow: hidden;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    background-color: var(--accent-color);
+    opacity: 0;
+
+    transform: translateY(100%);
+    transition: transform 250ms var(--transition-cubic), opacity 250ms var(--transition-cubic);
+}
+
+.gallery-list .item:hover .overlay {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.overlay-text {
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+
+    color: var(--light-color);
 }
 
 .gallery-list .item-text {
@@ -504,6 +630,8 @@ header {
     color: var(--light-color);
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+
+    transition: background-color 250ms var(--transition-cubic), color 250ms var(--transition-cubic);
 }
 
 .footer-soc-link:hover,
